src/app/components/contribute/table-editor.module.css
.table {
  width: 100%;
  border-collapse: collapse;
  margin-bottom: 1rem;
  font-size: 0.875rem;
}
.table th {
  text-align: center;
}

.table th,
.table td {
  padding: 0.5rem;
  border: 1px solid #e2e8f0;
  vertical-align: top;
}
.table thead {
  background-color: #f8fafc;
  font-weight: 600;
  position: sticky;
  top: 0;
  z-index: 10;
}

.table th label {
  display: flex;
  flex-wrap: wrap;
  gap: 0.5rem;
  width: 100%;
  height: 100%;
  cursor: pointer;
  justify-content: center;
}

.table tbody tr:hover {
  background-color: #f1f5f9;
}

.table button {
  width: 100%;
  padding: 0.5rem;
  background-color: #e2e8f0;
  border: none;
  cursor: pointer;
  transition: background-color 0.2s;
}

.table button:hover {
  background-color: #cbd5e1;
}

.excluded {
  color: #94a3b8;
  background-color: #f8fafc;
  text-decoration: line-through;
}

.excluded label {
  color: initial;
  text-decoration: none;
}
/* Bright, easy to find */
.table .saveButton {
  background-color: #344cb7;
  color: #fcfcfc;
  border-color: #344cb7;
  padding: 0.5rem 1rem;
  font-size: 0.875rem;
  font-weight: 600;
  border-radius: 0.25rem;
  transition: all 0.2s;
}

.table .saveButton:hover,
.table .saveButton:focus {
  box-shadow: 2px 2px 0 0 rgba(0, 0, 0, 0.25);
}

